welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:10: error: ';' expected but 'else' found.
  else{
  ^